--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "this is text *bo"
+   ]
   },
   {
    "cell_type": "markdown",
