--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is text *bo"
+    "this is text *bold*"
    ]
   },
   {
