--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is text *bold*"
+    "this is text **bold**"
    ]
   },
   {
